--- a/src/main/resources/templates/advertform.html
+++ b/src/main/resources/templates/advertform.html
@@ -7,11 +7,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Form</h1>
-<form action="#" th:action="@{/greeting}" th:object="${greeting}" method="post">
-    <p>Id: <input type="text" th:field="*{id}" /></p>
-    <p>Message: <input type="text" th:field="*{content}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+<h1>My searches</h1>
+<form action="#" th:action="@{/adverts}" method="post">
+    <p>Test search: <input type="submit" value="View Adverts" /></p>
 </form>
 </body>
 </html>
