--- a/src/main/resources/templates/listadverts.html
+++ b/src/main/resources/templates/listadverts.html
@@ -13,7 +13,7 @@
     <table th:object="${adverts}" id="advertTable" class="table">
             <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">Timestamp</th>
                 <th scope="col">Title</th>
                 <th scope="col">Price</th>
                 <th scope="col">Link</th>
@@ -21,16 +21,16 @@
             </thead>
         <tbody>
         <tr th:each="advert :${adverts}">
-            <td  th:text="${advert.getId()}"></td>
+            <td  th:text="${advert.getTimestamp()}"></td>
             <td  th:text="${advert.getTitle()}"></td>
             <td  th:text="${advert.getPrice()}"></td>
-            <td>  <a th:href="${advert.getLink()}"> Link </a></td>
+            <td>  <a th:href="${advert.getLink()}" target="_blank"> Link </a></td>
         </tr>
         </tbody>
     </table>
 </div>
 
-<a href="/greeting">Submit another search</a>
+<a href="/adverts">Submit another search</a>
 
 <script src="webjars/jquery/1.9.1/jquery.min.js"></script>
 <script src="webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
